<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:layout_width="@dimen/sched_item_width"
        android:layout_height="@dimen/sched_item_height"
        app:srcCompat="@drawable/footbalicon46121"
        android:id="@+id/teamLogo"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:contentDescription="@string/team_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/sched_item_height"
        android:text="@string/sched_item_name"
        android:ems="10"
        android:id="@+id/scheduleText"
        android:layout_weight="1"
        android:background="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/sched_item_height"
        android:text="@string/sched_item_date"
        android:ems="10"
        android:id="@+id/dateText"
        android:layout_weight="1"
        android:background="@color/colorAccent"/>
</LinearLayout>